--- a/.gitignore
+++ b/.gitignore
@@ -1,104 +1,67 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+item=[]
+cad=[]
+vend=[]
 
-# C extensions
-*.so
+#Função insere
+def menu(item):
+   
+  op="s"
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+  while op=="s":
+    #Chama a função que verifica e insere o CÓDIGO da peça.
+    vfCod(cad)    
+    #Chama a função que verifica e insere o NOME da peça.
+    vfNom(cad)
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+    cat=(int(input("Categoria da peça:")))
+    while cat<1 or cat>20:
+      print("Erro digite uma categoria entre 1 e 20.")
+      cat=(int(input("Categoria da peça:")))
+    item.append(cat)
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+    prec=(float(input("Preço da peça :"))) 
+    while prec<0:
+      prec=(float(input("Erro! Digite um valor positivo para preço:")))
+    item.append(prec)
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
+    quant=(int(input("Quantidade de peças:")))
+    while quant<0:
+      quant=(int(input("Erro! Digite um valor positivo para quantidade de peças:")))
+    item.append(quant)
 
-# Translations
-*.mo
-*.pot
+    cad.append(item.copy())
+    item.clear()
+    print(cad)
+    print(len(cad))
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
+    op=str(input("Deseja continuar?(s/n)"))    
+  select(cad)
 
-# Flask stuff:
-instance/
-.webassets-cache
+#Função 1- Mostra todo cadastro c/ filtro numérico  
+def mostra(cad):
+  xinf=(float(input("Digite o valor inferior:")))
+  xsup=(float(input("Digite o valor superior:")))
 
-# Scrapy stuff:
-.scrapy
+  for k in cad:    
+    if k[3]<=xsup and k[3]>=xinf:
+      print(k)
+  ch=str(input("Deseja mostrar o cadastro com um novo filtro?(s/n)"))
+  while ch=="s":
+    mostra(cad)
+  if ch=="n":
+    select(cad)
+      
+#Função verifica sé já existe alguma peça com esse código no cadastro e apresenta erro se código for valor negativo.
 
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
+def vfCod(cad):
+  cod=(int(input("Código da peça:")))
+  while cod<=0:
+    cod=(int(input("Erro! digite um valor positivo:")))
+  
+  i=0
+  for k in cad:
+    while cod==k[0]:      
+      cod=(int(input("Erro! Já existe uma peça com esse código!\nTente um novo valor: ")))    
+  i+=1  
+  item.append(cod)
+  
